--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,8 @@
     <script type="text/javascript" src="http://static.stackmob.com/js/json2-min.js"></script>
     <script type="text/javascript" src="http://static.stackmob.com/js/underscore-1.4.1-min.js"></script>
     <script type="text/javascript" src="http://static.stackmob.com/js/backbone-0.9.2-min.js"></script>
-    <script type="text/javascript" src="http://static.stackmob.com/js/stackmob-js-0.7.0-min.js"></script>
+    <!-- // <script type="text/javascript" src="http://static.stackmob.com/js/stackmob-js-0.7.0-min.js"></script> -->
+    <script src="http://www.parsecdn.com/js/parse-1.2.0.min.js"></script>
 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/foundation/3.2.2/javascripts/foundation.min.js"></script>
     <!-- <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js"></script> -->
@@ -24,13 +25,7 @@
     <script type="text/javascript" src="/controllers.js"></script>
 
     <script type="text/javascript">
-      StackMob.init({
-        appName: "ten",
-        clientSubdomain: "junirokgmailcom",
-        publicKey: "75c4ebdf-1e15-4a04-9511-cfcfe61dc4f9",
-        apiURL: "https://api.stackmob.com/",
-        apiVersion: 0
-      });
+      Parse.initialize("mWF6nv6fLZx5l0FOYW8SSxfE07fcA4kMHPfl2UzR", "m2N5pguJAwmEa6pEK1JwQ3nYqCg17K3PXIN3yCKK");
     </script>
 
     <script type="text/javascript">
