--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,1 @@
-body {
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-}
+index.css
