--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <h3 class="subheader" data-ng-show="isLoggedIn">Hello {{username}},</h3>
+  <h3 class="subheader" data-ng-show="{{emailVerified}}">You have not verified yoru email!</h3>
   <div class="row">
     <div class="seven columns centered">
       <div class="row collapse">
