--- a/public/templates/test.html
+++ b/public/templates/test.html
@@ -9,10 +9,10 @@
             </div>
           </div>
           -->
-          <input type="text" placeholder="Enter Comment" data-ng-model="user.comment" />
+          <input type="text" placeholder="Enter Comment!" data-ng-model="comment" />
          
       </div>
     </fieldset>
-    <span>By clicking to register you agree to the <a href="#!/terms">terms of agreement</a></span><br><br>
-    <button class="button" data-ng-click="submit(user)">Register</button>
+   
+    <button class="button" data-ng-click="submit(comment)">Enter Comment</button>
     <a href="/" class="button" type="submit">Cancel</a>
