changes for select uni

--- a/public/templates/mcgill.html
+++ b/public/templates/mcgill.html
@@ -1,4 +1,3 @@
-<div class="container">
   <div class="row">
     <div class="seven columns centered">
       <div class="row collapse">
@@ -12,20 +11,9 @@
       <a href="#search">Advanced Search</a>
     </div>
   </div>
+
   <br/>
   <br/>
- <!-- 
-<dl class="tabs">
-  <dd class="active"><a href="#simple1Tab">Simple Tab 1</a></dd>
-  <dd ><a href="#simple2Tab">Simple Tab 2</a></dd>
-  <dd ><a href="#simple3Tab">Simple Tab 3</a></dd>
-</dl>
-<ul class="tabs-content">
-  <li class="active" id="simple1Tab">This is simple tab 1s content. Pretty neat, huh?</li>
-  <li  id="simple2Tab">This is simple tab 2s content. Now you see it!</li>
-  <li  id="simple3Tab">This is simple tab 3s content.</li>
-</ul>
--->
 
 
  <div class="row">
@@ -33,10 +21,8 @@
       <h4 class="subheader">Top Rated Courses</h4>
       <ul class="disc">
         <li><a href="#">ECSE 428 - Software Engineering Practice</a></li>
-        <li><a href="#">COMP 371 - Computer Graphics</a></li>
-        <li><a href="#">ARA 1991 - Applied Linguistic Anthropology</a></li>
+        <li><a href="#">ECSE 323 - Digital System Design</a></li>
+        <li><a href="#">SOCI 209 - Anthropology of Religion</a></li>
       </ul>
     </div>
-  </div> 
-</div>
-
+  </div>
