--- a/public/templates/udem.html
+++ b/public/templates/udem.html
@@ -1,5 +1,4 @@
-<div class="container">
-  <div class="row">
+   <div class="row">
     <div class="seven columns centered">
       <div class="row collapse">
         <div class="ten mobile-three columns">
@@ -12,31 +11,18 @@
       <a href="#search">Advanced Search</a>
     </div>
   </div>
+
   <br/>
   <br/>
- <!-- 
-<dl class="tabs">
-  <dd class="active"><a href="#simple1Tab">Simple Tab 1</a></dd>
-  <dd ><a href="#simple2Tab">Simple Tab 2</a></dd>
-  <dd ><a href="#simple3Tab">Simple Tab 3</a></dd>
-</dl>
-<ul class="tabs-content">
-  <li class="active" id="simple1Tab">This is simple tab 1s content. Pretty neat, huh?</li>
-  <li  id="simple2Tab">This is simple tab 2s content. Now you see it!</li>
-  <li  id="simple3Tab">This is simple tab 3s content.</li>
-</ul>
--->
 
 
  <div class="row">
     <div class="six columns panel centered">
       <h4 class="subheader">Top Rated Courses</h4>
       <ul class="disc">
-        <li><a href="#">ECSE 428 - Software Engineering Practice</a></li>
-        <li><a href="#">COMP 371 - Computer Graphics</a></li>
         <li><a href="#">ARA 1991 - Applied Linguistic Anthropology</a></li>
+        <li><a href="#">ECE 2012 - Electric Circuits 2</a></li>
+        <li><a href="#">ECN 2205 - Non-Cooperative Game Theory</a></li>
       </ul>
     </div>
-  </div> 
-</div>
-
+  </div>
