Implemented search with Angular. Added simple validation to create course. Fix create course link to  #/create

--- a/public/templates/concordia.html
+++ b/public/templates/concordia.html
@@ -1,7 +1,7 @@
 <!-- Create a new course -->
 <div class="row">
   <div class="span12">
-    <a href="#/mcgill/create" class="btn">Create Course</a>
+    <a href="#/create" class="btn">Create Course</a>
   </div>
 </div>
 
