--- a/public/templates/udem.html
+++ b/public/templates/udem.html
@@ -1,7 +1,7 @@
 <!-- Create a new course -->
 <div class="row">
   <div class="span12">
-    <a href="#/mcgill/create" class="btn">Create Course</a>
+    <a href="#/create" class="btn">Create Course</a>
   </div>
 </div>
 
