Implemented Course Review Form

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,18 +1,42 @@
-<div class="row">
-  <div class="span12">
-    <h5>Hello {{user.attributes.username}}</h2>
-    <div class="row">
-      <div class="span10">
-        <!--
-        <p class="lead">Search for a class</p>
-        <div class="input-append">
-          <input class="span6" id="appendedInputButtons" type="text" placeholder="Search by Course Code or Course Name">
-          <button class="btn btn-primary" type="button">Search</button>
-          <button class="btn btn-primary" type="button">Advanced Search</button>
-        </div>
-        -->
-        Please choose a university.
-      </div>
-    </div>
+<style>
+body {
+  background: url(mcgill-quad-pic.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+</style>
+
+<div class="hero-unit" style="background-color: rgba(255, 255, 255, 0.7)">
+  <h1>Rate My Courses</h1>
+  <p>Rating your courses since 2013</p>
+
+  <div class="row">
+    <a href="#/mcgill" class="thumbnail">
+      <img src="mcgill.png" width="200px" alt="" />
+    </a>
+    <br/>
+    <a href="#/concordia" class="thumbnail">
+      <img src="concordia.png" width="200px" alt="" />
+    </a>
+    <br/>
+    <a href="#/udem" class="thumbnail">
+      <img src="udem.png" width="200px" alt="" />
+    </a>
   </div>
+
+  <!-- p>
+    <a href="#/mcgill" class="btn btn-danger btn-large">
+      McGill
+    </a>
+
+    <a href="#/concordia" class="btn btn-warning btn-large">
+      Concordia
+    </a>
+
+    <a href="#/udem" class="btn btn-primary btn-large">
+      University de Montreal
+    </a>
+  </p> -->
 </div>
