--- a/public/templates/universities/mcgill.html
+++ b/public/templates/universities/mcgill.html
@@ -1,8 +1,8 @@
 <!-- Create a new course -->
-<div class="row">
-  <div class="span12">
-    <a href="#/create" class="btn">Create Course</a>
-  </div>
+<div class="alert alert-block">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <h4>Welcome {{user.attributes.username | capitalize}}</h4>
+  We are currently in beta. If you can't find a course, you can make a new submission to our database <a href="#/create">here</a>!
 </div>
 
 <!-- Search Bar -->
@@ -29,7 +29,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="course in courses | filter:search">
+    <tr ng-repeat="course in courses | filter: search" onClick="window.open('#/courses/{{course.objectId}}','_self')">
         <td>{{course.code}}</td>
         <td>{{course.number}}</td>
         <td>{{course.title}}</td>
@@ -44,7 +44,7 @@
 
 <!-- Top Rated Courses -->
 <div class="row">
-  <div class="span12 well">
+  <div class="span12">
     <h4 class="subheader">Top Rated Courses</h4>
     <ul class="disc">
       <li><a href="#">ECSE 428 - Software Engineering Practice</a></li>
