--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -55,5 +55,6 @@
     <script type="text/javascript" src="/controller.js"></script>
     <script type="text/javascript" src="/holder.js"></script>
     <script type="text/javascript" src="/jquery.raty.js"></script>
+    <script type="text/javascript" src="/md5.js"></script>
   </body>
 </html>
