--- a/public/templates/universities/mcgill.html
+++ b/public/templates/universities/mcgill.html
@@ -29,7 +29,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="course in courses | filter: search" onClick="window.open('#/courses/{{course.objectId}}','_self')">
+    <tr ng-repeat="course in courses | filter: search" onClick="window.open('#/courses/{{course.objectId}}','_self')" style="cursor: pointer; cursor: hand;">
         <td>{{course.code}}</td>
         <td>{{course.number}}</td>
         <td>{{course.title}}</td>
