Added moment for timestamps

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -56,5 +56,6 @@
     <script type="text/javascript" src="/holder.js"></script>
     <script type="text/javascript" src="/jquery.raty.js"></script>
     <script type="text/javascript" src="/md5.js"></script>
+    <script type="text/javascript" src="/moment.js"></script>
   </body>
 </html>
