--- a/public/templates/courses.html
+++ b/public/templates/courses.html
@@ -14,6 +14,7 @@
           Course Rating: <img src="/stars/{{rating.course_rating}}.png" alt=""/>
           Professor Rating: <img src="/stars/{{rating.prof_rating}}.png" alt=""/>
           <p>{{rating.comments}}</p>
+          <a ng-click="delete(rating)"><small ng-show="rating.deletable">delete comment</small></a>
         </div>
       </div>
     </div>
