View Category - Search by Prof

--- a/public/templates/universities/mcgill.html
+++ b/public/templates/universities/mcgill.html
@@ -26,6 +26,7 @@
       <th>Course Code</th>
       <th>Course Number</th>
       <th>Course Title</th>
+      <!-- <th>Course Profs</th> -->
     </tr>
   </thead>
   <tbody>
@@ -33,6 +34,7 @@
         <td>{{course.code}}</td>
         <td>{{course.number}}</td>
         <td>{{course.title}}</td>
+        <!-- <td>{{course.profs}}</td> -->
     </tr>
   </tbody>
   <tbody id="courses">
