--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -35,6 +35,7 @@
                   <li data-ng-hide="isLoggedIn"><a href="#/login">Login</a></li>
                   <li data-ng-hide="isLoggedIn"><a href="#/register">Register</a></li>
                   <li data-ng-show="isLoggedIn"><a href="#/profile">{{user.attributes.email}}</a></li>
+                  <li data-ng-show="isAdmin"><a href="#/users">Users List</a></li>
                   <li data-ng-show="isLoggedIn"><a href="#/logout">Logout</a></li>
                 </ul>
               </div>
