--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,6 +1,6 @@
 <style>
 body {
-  background: url(mcgill-quad-pic.jpg) no-repeat center center fixed;
+  background: url(mcgill-quad-pic2.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
