--- a/public/templates/universities/mcgill.html
+++ b/public/templates/universities/mcgill.html
@@ -26,7 +26,7 @@
       <th>Course Code</th>
       <th>Course Number</th>
       <th>Course Title</th>
-      <!-- <th>Course Profs</th> -->
+      <th>Course Profs</th>
     </tr>
   </thead>
   <tbody>
@@ -34,7 +34,7 @@
         <td>{{course.code}}</td>
         <td>{{course.number}}</td>
         <td>{{course.title}}</td>
-        <!-- <td>{{course.profs}}</td> -->
+        <td>{{course.profs | professor_list3}}</td>
     </tr>
   </tbody>
   <tbody id="courses">
