attempting edit profile, contd

--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -6,13 +6,13 @@
       <fieldset>
        <!-- <input type="text" placeholder="Username" data-ng-model="user.username" /> -->
        <input type="text" placeholder="Username" data-ng-model="user.username" value="{{currentUser.attributes.username}}" />
-        <input type="text" placeholder="Email" data-ng-model="user.email" />
-        <input type="password" placeholder="Password" data-ng-model="user.password" />
-        <input type="password" placeholder="Re-enter Password" data-ng-model="user.password2" />
+        <input type="text" placeholder="Email" data-ng-model="user.email" value="{{currentUser.attributes.email}}" />
+        <input type="password" placeholder="Password" data-ng-model="user.password" value="{{currentUser.attributes.password}}" />
+        <input type="password" placeholder="Re-enter Password" data-ng-model="user.password2" value="{{currentUser.attributes.password}}" />
       </fieldset>
 
 
-      <button class="btn btn-primary" data-ng-click="submit(user)">Save Changes</button>
+      <button class="btn btn-primary" data-ng-click="edit(user)">Save Changes</button>
     </form>
   </div>
 </div>
