--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -58,5 +58,6 @@
     <script type="text/javascript" src="/jquery.raty.js"></script>
     <script type="text/javascript" src="/md5.js"></script>
     <script type="text/javascript" src="/moment.js"></script>
+    <script type="text/javascript" src="/lodash.js"></script>
   </body>
 </html>
