--- a/public/index.css
+++ b/public/index.css
@@ -123,3 +123,13 @@
     .navbar-wrapper {
       margin-top: 10px;
     }
+
+    .thumbnail {
+      background-color: rgba(255,255,255,.3);
+
+    }
+
+    .thumbnail:hover {
+      background-color: rgba(255,255,255,.8);
+
+    }
