user delete their own accounts via edit profile

--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -13,6 +13,8 @@
 
 
       <button class="btn btn-primary" data-ng-click="edit(newuser)">Save Changes</button>
+      <br/>
+      <button class="btn btn-primary" data-ng-click="delete()">Delete Account</button>
     </form>
   </div>
 </div>
