--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -13,8 +13,8 @@
 
 
       <button class="btn btn-primary" data-ng-click="edit(newuser)">Save Changes</button>
-      <br/>
-      <button class="btn btn-primary" data-ng-click="delete()">Delete Account</button>
+      <br/><br/>
+      <button class="btn btn-primary" ng-hide="currentUser.username == 'admin'" data-ng-click="delete()">Delete Account</button>
     </form>
   </div>
 </div>
